[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/UI/Dialogue/dialogue_system.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Bitread.tres" type="DynamicFont" id=2]
[ext_resource path="res://Conversations/hogwash.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ContinueIndicator:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_bottom = 4.0
bg_color = Color( 0.768627, 0, 0.258824, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="Dialogue" type="Control"]
margin_top = 10.0
margin_bottom = 10.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Continue_Indicator = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="SpriteTimer" type="Timer" parent="."]
one_shot = true

[node name="Frame" type="ColorRect" parent="."]
margin_right = 600.0
margin_bottom = 200.0
color = Color( 0.175781, 0.175781, 0.175781, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpriteLeft" type="Sprite" parent="Frame"]
position = Vector2( -1.19209e-06, -83 )
scale = Vector2( 10, 10 )
texture = ExtResource( 3 )
centered = false

[node name="SpriteRight" type="Sprite" parent="Frame"]
position = Vector2( 503, -83 )
scale = Vector2( 10, 10 )
texture = ExtResource( 3 )
centered = false
flip_h = true

[node name="RichTextLabel" type="RichTextLabel" parent="Frame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -50.0
margin_right = 300.0
margin_bottom = 50.0
custom_fonts/mono_font = ExtResource( 2 )
custom_fonts/bold_italics_font = ExtResource( 2 )
custom_fonts/italics_font = ExtResource( 2 )
custom_fonts/bold_font = ExtResource( 2 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "Empty text"
text = "Empty text"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choices" type="Control" parent="Frame"]

[node name="NameRight" type="Label" parent="Frame"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -75.0
margin_bottom = 25.0
grow_horizontal = 0
size_flags_horizontal = 9
size_flags_vertical = 8
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 2 )
text = "Name 2"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLeft" type="Label" parent="Frame"]
margin_right = 74.0
margin_bottom = 25.0
size_flags_horizontal = 15
size_flags_vertical = 15
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 2 )
text = "Name 1"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueIndicator" type="ColorRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.270671 )
margin_right = 10.0
margin_bottom = 10.0
__meta__ = {
"_edit_use_anchors_": false
}
